# SATySFi

./: .dockerignore  .editorconfig  .emacs-open-group  .gitattributes  .gitignore  .gitmodules  .merlin  .travis.yml  CHANGELOG.md  Changes  Dockerfile  LICENSE  LICENSE.md  META  Makefile  README-ja.md  README.md  README_ja.md  assoc.ml  assoc.mli  assoclist.ml  assoclist.mli  check-packages.sh  default-registry-commit-hash.txt  default.nix  display.ml  display.mli  download-fonts.sh  dune-project  dune-workspace  eval.ml  eval.mli  evaluator.ml  evaluator.mli  flake.nix  flatestubs.c  gen_code.rb  install-libs.sh  introduction_to_camlpdf.tex  kindenv.ml  (+96 more)
.travis/: install-dist.sh
backend/: .merlin  Makefile  TODO.md  __tags  _tags  base85.ml  discretionaryID.ml  discretionaryID.mli  flowGraph.ml  fontFormat.ml  fontFormat.mli  fontInfo.ml  fontInfo.mli  graphics.ml  graphics.mli  handlePdf.ml  handlePdf.mli  horzBox.ml  how-to-compile.md  internalText.ml  lineBreak.ml  lineBreak.mli  outputText.ml  pageBreak.ml  util.ml  util.mli
bin-saphe/: configError.ml  configUtil.ml  constant.ml  depsConfig.ml  dune  envelopeConfig.ml  libraryRootConfig.ml  lockConfig.ml  lockFetcher.ml  lockFetcher.mli  logging.ml  logging.mli  main.ml  packageConfig.ml  packageConfig.mli  packageConstraintSolver.ml  packageRegistryConfig.ml  packageSystemBase.ml  saphe.ml  satysfiCommand.ml
demo/: .gitignore  Makefile  demo.saphe.lock.yaml  demo.saphe.lock.yaml.expected  demo.saphe.yaml  demo.saty  demo.satysfi-lock  demo.satysfi-lock-expected  local.satyh
doc/: .gitignore  Makefile  api.odocl  cd.satyh  color.satyh  decoset.satyh  doc-functor-local.satyh  doc-functor.saty  doc-lang.saphe.lock.yaml  doc-lang.saphe.lock.yaml.expected  doc-lang.saphe.yaml  doc-lang.saty  doc-lang.satysfi-lock  doc-lang.satysfi-lock-expected  doc-primitives.saphe.lock.yaml  doc-primitives.saphe.lock.yaml.expected  doc-primitives.saphe.yaml  doc-primitives.saty  doc-primitives.satysfi-lock  doc-primitives.satysfi-lock-expected  gfncls.sty  gr.satyh  intr_style.css  intr_style.mcrdh  intr_style_html.mcrdh  intr_style_latex.mcrdh  introduction.mcrd  list.satyh  local-math.satyh  local.satyh  math.satyh  math1.saphe.lock.yaml.expected  math1.saphe.yaml  math1.saty  math1.satysfi-lock  math1.satysfi-lock-expected  paren.satyh  pervasives.satyh  stdja.satyh  tabular.satyh  (+4 more)
doc-old/: Makefile  intr_style_latex.mcrdh  introduction.mcrd
examples/: pdfencrypt.ml  pdftest.ml
lib-satysfi/: satysfi-library-root.yaml
nix/: default.nix  ocamlPackages.nix  opam-selection.nix  opam2nix.nix
obsolete/: .emacs-open-group  assoc-bar.satyh  out.ml  out.mli  stacklist.mli
onbrowser/: .gitignore  Makefile  package.json
src/: .merlin  alist.ml  alist.mli  assoc.ml  assoc.mli  config.ml  config.mli  directedGraph.ml  directedGraph.mli  display.ml  display.mli  domstd.ml  domstd.mli  dune  escapeMonad.ml  escapeMonad.mli  evalVarID.ml  evalVarID.mli  evaluator.ml  hashTree.ml  hashTree.mli  jbuild  kindenv.ml  kindenv.mli  lexer.mll  main.ml  main.mli  myUtil.ml  myUtil.mli  myYojsonUtil.ml  onbrowser.ml  optionMonad.ml  optionMonad.mli  otfSubset.ml  otfUtils.ml  otfm.mllib  out.ml  parser.mly  primitives.ml  primitives.mli  (+17 more)
src/backend/: .merlin  Makefile  TODO.md  action.ml  action.mli  annotation.ml  annotation.mli  buildDocument.ml  buildDocument.mli  crossRef.ml  crossRef.mli  depsMode.ml  depsMode.mli  discretionaryID.ml  documentInfomationDictionary.ml  documentInfomationDictionary.mli  documentInformationDictionary.ml  documentInformationDictionary.mli  flowGraph.ml  fontAccess.ml  fontFormat.ml  fontFormat.mli  fontInfo.ml  fontInfo.mli  fontKey.ml  fontKey.mli  graphicBase.ml  graphicD.ml  graphicD.mli  graphics.ml  graphics.mli  handlePdf.ml  handlePdf.mli  horzBox.ml  imageHashTable.ml  imageHashTable.mli  imageInfo.ml  imageInfo.mli  internalText.ml  internalText.mli  (+39 more)
src/chardecoder/: .merlin  charBasis.ml  convertText.ml  convertText.mli  dataLexer.ml  dataLexer.mli  dataLexer.mll  dataParser.mly  lineBreakDataMap.ml  lineBreakDataMap.mli  scriptDataMap.ml  scriptDataMap.mli  scriptHandler.ml  scriptHandler.mli  scriptLexer.mll  scriptMap.ml  scriptMap.mli  scriptParser.mly
src/frontend/: .merlin  assoc.ml  assoc.mli  boundID.ml  boundID.mli  boundRowID.ml  boundRowID.mli  closedEnvelopeDependencyResolver.ml  closedFileDependencyResolver.ml  closedFileDependencyResolver.mli  closedLockDependencyResolver.ml  codeSymbol.ml  codeSymbol.mli  compiledEvalUtil.ml  compiledTypes.cppo.ml  configError.ml  configUtil.ml  constant.ml  context.ml  context.mli  dependencyGraph.ml  dependencyGraph.mli  depsConfig.ml  directedGraph.ml  directedGraph.mli  display.ml  display.mli  displayMap.ml  displayMap.mli  documentAttribute.ml  documentAttribute.mli  envelopeChecker.ml  envelopeChecker.mli  envelopeConfig.ml  envelopeReader.ml  envelopeReader.mli  envelopeSystemBase.ml  errorReporting.ml  errorReporting.mli  evalUtil.ml  (+133 more)
src/frontend/bytecomp/: bytecomp.ml  compiler.ml  ir.cppo.ml  ir.ml  ir.mli  ir_.cppo.ml  ir_.mli  ir_template.ml  vm.cppo.ml  vm.ml  vm.mli  vm_.cppo.ml  vm_.mli  vm_template.ml  vminstdef.yaml
src/md/: decodeMD.ml  decodeMD.mli  markdownParser.ml  markdownParser.mli
src/text-mode/: textBackend.ml
test/: dune  parser.expected  parser_test.ml  parser_test.saty
test/common/: absPathTest.ml  commonTest.ml  dependencyGraphTest.ml  dune  semanticVersionTest.ml
test/misc/: dependencyGraphTest.ml  dune  miscTest.ml  packageConstraintSolverTest.ml
test/parsing/: dune  mathlist.ml  mathlist.saty  multi-byte.saty  nx.ml  nx.saty  p.ml  parser.expected  parser_test.ml  pat.ml  patlist.saty  pats.saty  pattuple.saty  sxlist.ml  sxlist.saty  toplevel.saty  tx.ml  txlist.saty  txprod.saty  txrecord.saty  variants.saty
test/saphe/: dune  packageConfigTest.ml  packageConstraintSolverTest.ml  packageRegistryArrangerTest.ml  packageReleaseConfigTest.ml  sapheTest.ml  sapheTestUtil.ml
tools/gencode/: dune  gen_code.rb  gencode.ml  instruction.ml  instruction.mli  name.ml  type.ml  type.mli  u.ml  vminst.ml
(+307 files in other folders)
