opam-version: "2.0"
name: "satysfi-dist"
version: "0.0.6"
maintainer: "gfngfn"
authors: [
  "gfngfn"
]
extra-source "temp/lm2.004otf.zip" {
  archive: "http://www.gust.org.pl/projects/e-foundry/latin-modern/download/lm2.004otf.zip"
  checksum: [
    "sha256=5b0236051d3728be6616f1b274e3b910473875b5a3ef9382f0ef00384ddb161b"
    "sha512=c63068c86590e768498ef5f68a17a737aa40981432d8f6366c29760ea032a603ddd3d748d348ab259beba77966c292f9382b1fe9eb7a78af0926c6abc71f6f81"
  ]
}
extra-source "temp/latinmodern-math-1959.zip" {
  archive: "http://www.gust.org.pl/projects/e-foundry/lm-math/download/latinmodern-math-1959.zip"
  checksum: [
    "sha256=aaaa060b4ffc091461e875efb9498b9abfa7c7a48f38eb33882868839903a4f8"
    "sha512=b4fb4b575107b56eee0fed7971b09d334d4b162842675cf5f5ff7cb12e08099fb00755c81ddc1f04138f87b216592299028906165e2cec43521c6ca61b466d4c"
  ]
}
extra-source "temp/junicode-1.002.zip" {
  archive: "http://downloads.sourceforge.net/project/junicode/junicode/junicode-1.002/junicode-1.002.zip"
  checksum: [
    "sha256=c199d96c8424be60fcab8d00d2eee39ea8ae632cfd5e710cbbd70626d6a729e7"
    "sha512=1738802f70b0029567be608ed36481864f8f7f029fd1c45d73fa25d092d49c978c51df1c01147b7b176e9b0409d7f15d5713a6daf1b1b269636bc6324b2c6f37"
  ]
}
extra-source "temp/IPAexfont00401.zip" {
  archive: "https://ipafont.ipa.go.jp/IPAexfont/IPAexfont00401.zip"
  checksum: [
    "sha256=bcf8374ab3f9672c421120430dd19a51c99f5265cf06fc340d9a661ddfd7974b"
    "sha512=fe639ded0a25eed66df8cc1e9d5e965b501574a25fab542a749b3cb8464690448e44343ff5845aecd3224ec481c4089ee56e64880cbbc9211a260b22d4cc68cd"
  ]
}
homepage: "https://github.com/gfngfn/SATySFi"
dev-repo: "git+https://github.com/gfngfn/SATySFi.git"
bug-reports: "https://github.com/gfngfn/SATySFi/issues"
build: [
  ["./download-fonts.sh"]
]
install: [
  ["./install-libs.sh" "%{share}%/satysfi"]
]
remove: [
  ["rm" "-rf" "%{share}%/satysfi/dist"]
]
depends: [
  "satysfi" {= "%{version}%"}
]
synopsis: "Standard library of SATySFi"
description: """
Provides the standard library of SATySFi"""
