opam-version: "2.0"
name: "satysfi"
version: "0.0.8"
maintainer: "gfngfn"
authors: [
  "gfngfn"
]
homepage: "https://github.com/gfngfn/SATySFi"
dev-repo: "git+https://github.com/gfngfn/SATySFi.git"
bug-reports: "https://github.com/gfngfn/SATySFi/issues"
build: [
  ["mkdir" "-p" "temp"]
  [make "-f" "Makefile" "PREFIX=%{prefix}%"]
]
install: [
  [make "-f" "Makefile" "install" "PREFIX=%{prefix}%"]
]
remove: [
  [make "-f" "Makefile" "uninstall" "PREFIX=%{prefix}%"]
]
# Packages whose version suffix is "+satysfi" are distributed on satysfi-external-repo.
depends: [
  "ocaml" {>= "4.12.0"}
  "batteries"
  "camlimages" {>= "5.0.1"}
  "camlpdf" {= "2.3.1+satysfi"}
  "cmdliner" {>= "1.1.1"}
  "core_kernel" {>= "v0.15"}
  "core_unix" {>= "v0.15"}
  "cppo" {build & >= "1.6.4" & < "1.7.0"}
  "dune" {build}
  "menhir"
  "ocamlfind" {build}
  "otfed" {= "0.0.1"}
  "ppx_deriving"
  "re" {build}
  "uutf"
  "yojson-with-position" {= "1.4.2+satysfi"}
  "omd" {>= "2.0.0~alpha" & < "3.0.0"}
  "ocamlgraph"
  "alcotest" {with-test & >= "1.4.0"}
  "yaml" {>= "2.1.0"}
  "0install-solver" {>= "2.0" & < "3.0"}
  "semver2" {>= "1.2.0"}
  "uri" {>= "4.2.0"}
]
synopsis: "A statically-typed, functional typesetting system"
description: """
SATySFi is a typesetting system equipped with a statically-typed, functional programming language. It consists mainly of two “layers” ― the text layer and the program layer. The former is for writing documents in LaTeX-like syntax. The latter, which has OCaml-like syntax, is for defining functions and commands. SATySFi enables you to write documents markuped with flexible commands of your own making. In addition, its informative type error reporting will be a good help to your writing."""
