(executable
 (name main)
 (public_name satysfi)
 (flags (-w -3 -bin-annot -thread -safe-string))
 (libraries str
            batteries
            camlimages
            camlimages.jpeg
            camlpdf
            core_kernel
            core_kernel.pairing_heap
            menhirLib
            otfm
            uutf
            yojson
            omd
            )
 (preprocess (pps
              ppx_deriving.show
              ))
 )

;; dune requires all the .ml/.mli files to be in the same directory as the jbuild.
;; https://github.com/ocaml/dune/issues/109
(copy_files# backend/*.{ml,mli})
(copy_files# text-mode/*.{ml,mli})
(copy_files# md/*.{ml,mli})
(copy_files# chardecoder/*.{ml,mli})
(copy_files  chardecoder/*.{mll,mly})
(copy_files# frontend/*.{ml,mli})
(copy_files  frontend/*.{mll,mly})
(copy_files# frontend/bytecomp/*.{ml,mli})

(ocamllex
 (modules lexer dataLexer))

(menhir
 (modules parser dataParser)
 (flags (--table --explain)))

(rule
 (targets types.ml)
 (deps    (:src types.cppo.ml) __insttype.gen.ml __attype.gen.ml __codetype.gen.ml __unliftcode.gen.ml)
 (action  (run %{bin:cppo} %{src} -o %{targets})))

(rule
 (targets vm.ml)
 (deps    (:src vm.cppo.ml) __vm.gen.ml)
 (action  (run %{bin:cppo} %{src} -o %{targets})))

(rule
 (targets ir.ml)
 (deps    (:src ir.cppo.ml) __ir_0.gen.ml __ir_1.gen.ml)
 (action  (run %{bin:cppo} %{src} -o %{targets})))

(rule
 (targets evaluator.ml)
 (deps    (:src evaluator.cppo.ml) __evaluator_0.gen.ml __evaluator_1.gen.ml)
 (action  (run %{bin:cppo} %{src} -o %{targets})))

(rule
 (targets primitives.ml)
 (deps    (:src primitives.cppo.ml) __primitives_pdf_mode.gen.ml __primitives_text_mode.gen.ml)
 (action  (run %{bin:cppo} %{src} -o %{targets})))
